--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -1407,7 +1407,7 @@
         "    def getdataframe(self):\n",
         "        pass\n",
         "\n",
-        "    def getcontrolsbox(self):\n",
+        "    def getresultcontrols(self):\n",
         "        pass\n",
         "\n",
         "    def getresultstable(self):\n",
@@ -1416,7 +1416,7 @@
         "    def applytablestyle(self):\n",
         "        pass\n",
         "\n",
-        "    def getcontrolsbox(self):\n",
+        "    def getresultcontrols(self):\n",
         "        pass\n",
         "\n",
         "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
@@ -1483,9 +1483,9 @@
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
         "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
         "\n",
-        "    def getcontrolsbox(self):\n",
-        "        controls_hbox = HBox((), layout= {})\n",
-        "        return controls_hbox\n",
+        "    def getresultcontrols(self):\n",
+        "        sort_dropdown = Dropdown(description= \"Sort\", value= self.sort ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= {}, style= {})\n",
+        "        return (sort_dropdown,)\n",
         "\n",
         "class SearchResult(WebResult):\n",
         "    def __init__(self, search= \"\", site= X1337X, category= ALLCATEGORIES_TD, attrs= None , results = None, resultcount= 0, totalpages= 0, page= 0, nextpage= -1, previouspage= -1, sort= None) -> None:\n",
@@ -1545,9 +1545,9 @@
         "        self.table.style.apply(lambda s : [\"color: #d40404\" for i in range(len(s))], subset=[\"Leechers\"])\n",
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
         "\n",
-        "    def getcontrolsbox(self):\n",
-        "        controls_hbox = HBox((), layout= {})\n",
-        "        return controls_hbox\n",
+        "    def getresultcontrols(self):\n",
+        "        sort_dropdown =  Dropdown(description= \"Sort\", value= self.sort, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= {}, style= {})\n",
+        "        return (sort_dropdown,)\n",
         "\n",
         "#### API / Download library management\n",
         "\n",
@@ -3198,7 +3198,6 @@
         "                   info(f\"An item added to the sync list 2: {path2}, doesn't exist in path 1.\")\n",
         "     \n",
         "           for item in synced:\n",
-        "               print(item)\n",
         "               info(item)\n",
         "     \n",
         "           if sync_list:\n",
@@ -3206,16 +3205,13 @@
         "               for i in range(len(sync_list)):\n",
         "                   item = sync_list[i]\n",
         "                   msg = f\"{str(i + 1)+' - ' if sync else '    '}{item.message}\"\n",
-        "                   print(msg)\n",
         "                   info(item.message)\n",
         "                    \n",
         "           msg = f\"\\nTotal items in path 1: {ln1}   Total items in path 2:  {ln2}   Unsynced items: {len(sync_list)}.\\n\"\n",
         "           msg += f\"{f'Deleted empty folders in path 1:  {emty1}  ' if emty1 else ''}{f'Deleted empty folders in path 2:  {emty2}' if emty2 else ''}\\n\"\n",
         "           info(msg)\n",
-        "           print(msg)\n",
         "           \n",
         "           if sync and sync_list:\n",
-        "               print('Enter a selection for the synchronization:  e.g. i1, i2, i1-i5\\n')\n",
         "               inp = input().strip().lower()\n",
         "               if (inp == \"q\" or inp.startswith('n')):\n",
         "                   return\n",
@@ -3238,14 +3234,11 @@
         "                           continue\n",
         "               msg = f\"Syncing {first} with {second}.\\nTotal copying items: {len(rngs)}\"\n",
         "               info(msg)\n",
-        "               print(msg)\n",
         "               for i in rngs:\n",
         "                   p0 = sync_list[i].path\n",
         "                   p1 = second if sync_list[i].src == 1 else first\n",
-        "                   print(f\"Copying: {os.path.basename(p0)} to {p1}\")\n",
         "                   info(f\"Copying: {os.path.basename(p0)} to {p1}\")\n",
         "                   !rsync --size-only -P -h -r \"$p0\" \"$p1\"\n",
-        "           print(\"\\n.............\\n    Done\\n\")\n",
         "   else:\n",
         "       msg = f\"{first} {'exists' if os.path.exists(first) else 'does not exist'}\\n{second} {'exists' if os.path.exists(second) else 'does not exist'}\"\n",
         "       error(msg)\n",
@@ -3273,8 +3266,7 @@
         "    return False\n",
         "\n",
         "def mt(path, bd = None, ad = None, backup = False, prompt = False):\n",
-        "    if not (bd or ad):\n",
-        "        return\n",
+        "    if not (bd or ad): return\n",
         "    info(f'Deleing files dated before {datetime.fromtimestamp(bd).strftime(\"%Y-%m-%d\")} in {path}')\n",
         "    files = next(os.walk(path))[2]\n",
         "    check = bd and ad\n",
@@ -3295,7 +3287,6 @@
         "            rm(p0, backup, False)\n",
         "    if prompt:\n",
         "        rm(delpath= path, process_backup= backup, content= filter)\n",
-        "    print('..... Done .....\\n')\n",
         "\n",
         "def check_sd_base(path):\n",
         "  lookup = sd_pt.search(path)\n",
@@ -3309,16 +3300,6 @@
         "    if path:\n",
         "        info(f\"Creating dir: {path}\")\n",
         "        os.makedirs(path, exist_ok=True)\n",
-        "    if backup and False: #fixbackup\n",
-        "        for i in range(1, 4):\n",
-        "            nd = \"bk path\"\n",
-        "            np = nd[1]\n",
-        "            check = check_sd_base(np)\n",
-        "            if check:\n",
-        "                info(f\"Creating backup dir: {np}\")\n",
-        "                os.makedirs(nd, exist_ok=True)\n",
-        "            else:\n",
-        "                warning(f\"{nd[0]} doesn't exist.\")\n",
         "\n",
         "def clean_general(Type) :\n",
         "    dirs = next(os.walk(config.general_path))[1]\n",
@@ -3332,7 +3313,6 @@
         "            os.makedirs(p0, exist_ok= True)\n",
         "            !mv \"$p1\" \"$p0\"\n",
         "            p1 = p0\n",
-        "\n",
         "        if Type == MOVIE:\n",
         "            newname = name_movie(name)\n",
         "            save_path = config.movies_path\n",
@@ -3365,17 +3345,14 @@
         "            !mv \"$p1\" \"$p2\"\n",
         "        else:\n",
         "            p2 = p2 + name\n",
-        "\n",
         "        if Type == EPISODE and os.path.isdir(p2):\n",
         "            clean_season(p2)\n",
         "            p02 = p2\n",
         "            p2 = p2 + \"/\" \n",
-        "\n",
         "        if Type == SHOW and os.path.isdir(check):\n",
         "            save_path = check\n",
         "            p02 = p2\n",
         "            p2 = p2 + \"/\"\n",
-        "\n",
         "        !mv \"$p2\"* \"$save_path\"\n",
         "        if p02 and os.path.exists(p02): \n",
         "            !rm -r \"$p02\"\n",
@@ -3384,49 +3361,35 @@
         "    if multi:\n",
         "        if type_ == MOVIE:\n",
         "            if path :\n",
-        "                print(f\"Cleaning movie library path: {path}\")  \n",
         "                clean_movies_dir(path, backup = process_backup, delete_empty = delete_empty, clean = clean)\n",
         "            else:\n",
         "                clean_movies_dir(backup = process_backup, delete_empty = delete_empty, clean = clean)\n",
         "\n",
         "        elif type_ == SHOW:\n",
-        "            print(f\"Cleaning TV library path: {config.tv_path}\")\n",
         "            clean_tvshows()\n",
         "            if process_backup:\n",
         "                for pt in config.tvbackups:\n",
-        "                    print(f\"Cleaning backup TV library path: {pt}\")\n",
         "                    clean_tvshows(pt)\n",
         "\n",
         "    else:\n",
         "            if type_ == MOVIE:\n",
         "                if path and os.path.exists(path):\n",
-        "                        name = path.split(\"/\")[-1]\n",
-        "                        print(f\"Cleaning movie: {path}\")\n",
-        "                        clean_movie(path, name)\n",
-        "\n",
-        "                        if process_backup and False: #fixbackup\n",
-        "                            for dir in movies_basenames:\n",
-        "                                path = \"bk path\"\n",
-        "                                if os.path.exists(path):\n",
-        "                                    print(f\"Cleaning movie: {path}\")\n",
-        "                                    clean_movie(path, name)\n",
-        "                                else: \n",
-        "                                    warning(f\"Backup path: {path} doesn't exist.\")\n",
-        "                                    print(f\"Backup path: {path} doesn't exist.\")\n",
-        "\n",
+        "                    name = os.path.basename(path)\n",
+        "                    clean_movie(path, name)\n",
+        "                    if process_backup:          \n",
+        "                        for dir in config.moviesbackups:\n",
+        "                            path = f\"{dir}/{name}\"\n",
+        "                            if os.path.exists(path):\n",
+        "                                clean_movie(path, name)\n",
         "            elif type_ == SHOW:\n",
         "                if path and os.path.exists(path):\n",
-        "                        print(f\"Cleaning show path: {path}\")\n",
-        "                        clean_tvshow(path, keepdot)\n",
-        "                        if process_backup and False: #fixbackup\n",
-        "                            for dir in tv_basenames:\n",
-        "                                    path = \"bk path\"\n",
-        "                                    if os.path.exists(path):          \n",
-        "                                        print(f\"Cleaning backup Show path: {path}\")\n",
-        "                                        clean_tvshow(path, keepdot)\n",
-        "                                    else:\n",
-        "                                        warning(f\"Backup path: {path} doesn't exist.\")\n",
-        "                                        print(f\"Backup path: {path} doesn't exist.\")              \n",
+        "                    clean_tvshow(path, keepdot)\n",
+        "                    if process_backup:                                  #fixbackup\n",
+        "                        for dir in config.tvbackups:\n",
+        "                            path = f\"{dir}/{os.path.basename(path)}\"\n",
+        "                            if os.path.exists(path):          \n",
+        "                                clean_tvshow(path, keepdot)\n",
+        "     \n",
         "\n",
         "#### API / Download files utils\n",
         "\n",
@@ -3449,16 +3412,17 @@
         "                        output = !$cmd\n",
         "                        if output:  error(lines = output)\n",
         "                        attrs.old_files_dirs.add(oldfiletemppath)\n",
-        "                        info(f'Old file added: {lookup1[\"foundname\"]}')\n",
+        "                        info(f'Old files found: {lookup1[\"foundname\"]}')\n",
         "\n",
         "    elif attrs.type_ == MOVIE:\n",
-        "        oldfiletemppath = os.path.normpath(f\"{attrs.existing_path}/{delstr}\")\n",
-        "        os.makedirs(oldfiletemppath, exist_ok=True)    \n",
-        "        info(f'Moving files in {attrs.existing_path} to {oldfiletemppath}')\n",
-        "        cmd = f'mv \"{attrs.existing_path}/\"* \"{oldfiletemppath}\"'\n",
-        "        output = !$cmd\n",
-        "        if output:  error(lines = output)\n",
-        "        attrs.old_files_dirs.add(oldfiletemppath)\n",
+        "        if attrs.existing_path and os.path.isdir(attrs.existing_path):\n",
+        "            oldfiletemppath = os.path.normpath(f\"{attrs.existing_path}/{delstr}\")\n",
+        "            os.makedirs(oldfiletemppath, exist_ok=True)    \n",
+        "            info(f'Moving files in {attrs.existing_path} to {oldfiletemppath}')\n",
+        "            cmd = f'mv \"{attrs.existing_path}/\"* \"{oldfiletemppath}\"'\n",
+        "            output = !$cmd\n",
+        "            if output:  error(lines = output)\n",
+        "            attrs.old_files_dirs.add(oldfiletemppath)\n",
         "    info('Cleaning distination done.')\n",
         "    return\n",
         "    cmd\n",
@@ -3517,6 +3481,7 @@
         "def transfer_download_files(handle, copy= False):\n",
         "    handle.pause()\n",
         "    attrs: DownloadAttrs = handle.attrs\n",
+        "    os.makedirs(attrs.save_path, exist_ok= True)\n",
         "    status = handle.status()\n",
         "    downloadname = status.name\n",
         "    localsavingpath = f'{status.save_path}/{downloadname}'\n",
@@ -3556,7 +3521,6 @@
         "    if not attrs.save_name:\n",
         "        attrs.save_name = downloadname\n",
         "        donesavingpath = donesavingpath + attrs.save_name \n",
-        "\n",
         "    prepare_download_file_transfer(attrs, donesavingpath)  \n",
         "    if attrs.type_ == EPISODE and os.path.isdir(donesavingpath):\n",
         "        donesavingpath = f'{donesavingpath}/' \n",
@@ -4135,7 +4099,7 @@
         "    sites = [X1337X]\n",
         "    sitecategory = getsitecategory(type_category[type_], sites[0])\n",
         "    searchparameters = imdbsearchparams_text.value\n",
-        "    replace = imdbreplaceandmergeoldfiles_checkbox.value \n",
+        "    replace = imdbreplaceoldfiles_checkbox.value \n",
         "\n",
         "    if type_ == MOVIE:\n",
         "        title_type = IMDB_MOVIE_TITLE\n",
@@ -4267,8 +4231,10 @@
         "        info(f'{handle.name} finished downloading.')\n",
         "        clicktask(updatestatushtml, (f\"Saving {handle.attrs.save_name} to: {handle.attrs.save_path}\", INFO_EVENT, True, False))\n",
         "        appstate.transferings += 1\n",
+        "        handle.transfering = True\n",
         "        transfer_download_files(handle, copy= False)\n",
         "        handle.done = True\n",
+        "        handle.transfering = False\n",
         "        appstate.transferings -= 1\n",
         "        stopmonitor()\n",
         "        clicktask(update_download_view, (status, handle))  \n",
@@ -4278,7 +4244,6 @@
         "        active.remove(handle)\n",
         "        completed.append(handle)\n",
         "        startmonitor()\n",
-        "        handle.transfering = False\n",
         "        handle.done = True\n",
         "        handle.pause()\n",
         "        if len(active) == 0:\n",
@@ -4326,7 +4291,6 @@
         "                    clicktask(update_download_view, (status, handle))\n",
         "                    if status.is_finished or (wantedbytes > 10000 and downloadedbytes == wantedbytes):\n",
         "                        info(f\"{handle.name} finished downloading\")\n",
-        "                        handle.transfering = True\n",
         "                        appstate.completed += 1\n",
         "                        appstate.completed_down += downloadedbytes\n",
         "                        appstate.completed_up += uploadedbytes\n",
@@ -4601,36 +4565,27 @@
         "\n",
         "searchsearch_text = Text(description= \"Search\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "searchsearch_hbox = HBox((searchsearch_text,),layout= t_formrow_layout)\n",
-        "\n",
         "searchtype_dropdown = Dropdown(description= \"Download Type\", value= MOVIE ,options= [('General', GENERAL), ('Movie', MOVIE), ('Episode', EPISODE), ('Season', SEASON), ('TV Show', SHOW), ('Music Album', ALBUM), ('Song', TRACK)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchtype_hbox = HBox((searchtype_dropdown,), layout= t_formrow_layout)\n",
-        "\n",
         "searchsite_dropdown = Dropdown(description= \"Site\", value= X1337X, options = [('1337x', X1337X)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchsite_hbox = HBox((searchsite_dropdown,),layout= t_formrow_layout)\n",
-        "\n",
         "searchcategory_dropdown = Dropdown(description= \"Search Category\", value= ALLCATEGORIES_TD, options = [('All', ALLCATEGORIES_TD), ('Movies', MOVIESCATEGORY_TD), ('TV', TVCATEGORY_TD), ('Apps', APPSCATEGORY_TD), ('Games', GAMESCATEGORY_TD)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchcategory_hbox = HBox((searchcategory_dropdown,),layout= t_formrow_layout)\n",
-        "\n",
         "searchsort_dropdown = Dropdown(description= \"Results Sorting\", value= SEEDERSSORT, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchsort_hbox = HBox((searchsort_dropdown,),layout= t_formrow_layout)\n",
-        "\n",
         "searchorder_dropdown = Dropdown(description= \"Results Order\", value= DESCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchorder_hbox = HBox((searchorder_dropdown,), layout= t_formrow_layout)\n",
-        "\n",
-        "searchreplaceandmerge_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
+        "searchreplace_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
         "searchreplace_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
-        "searchreplace_hbox = HBox((searchreplaceandmerge_label, searchreplace_checkbox), layout= t_formrow_layout)\n",
-        "\n",
+        "searchreplace_hbox = HBox((searchreplace_label, searchreplace_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
         "searchbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "searchbackup_hbox = HBox((searchbackup_label, searchbackup_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_hbox.layout.display = None\n",
-        "searchreplaceandmerge_label.add_class(\"label-flex\")\n",
+        "searchreplace_label.add_class(\"label-flex\")\n",
         "searchbackup_label.add_class(\"label-flex\")\n",
-        "\n",
         "searchsaveas_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "searchsaveas_hbox = HBox((searchsaveas_text,),layout= t_formrow_layout)\n",
-        "\n",
         "searchsearch_button = Button(description= \"Search\", layout= bigbtn_layout, style= bigbtn_style)\n",
         "searchsearch_button.layout.align_self = \"center\"\n",
         "\n",
@@ -4756,10 +4711,10 @@
         "imdbfilterwatched_hbox = HBox((imdbfilterwatched_label, imdbfilterwatched_checkbox), layout= t_formrow_layout)\n",
         "imdbfilterwatched_label.add_class(\"label-flex\")\n",
         "\n",
-        "imdbreplaceandmergeoldfiles_label = Label(\"Replace and Merge Old Files\", layout= checkboxlabellayout)\n",
-        "imdbreplaceandmergeoldfiles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
-        "imdbreplaceandmergeoldfiles_hbox = HBox((imdbreplaceandmergeoldfiles_label, imdbreplaceandmergeoldfiles_checkbox), layout= t_formrow_layout)\n",
-        "imdbreplaceandmergeoldfiles_label.add_class(\"label-flex\")\n",
+        "imdbreplaceoldfiles_label = Label(\"Replace and Merge Old Files\", layout= checkboxlabellayout)\n",
+        "imdbreplaceoldfiles_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "imdbreplaceoldfiles_hbox = HBox((imdbreplaceoldfiles_label, imdbreplaceoldfiles_checkbox), layout= t_formrow_layout)\n",
+        "imdbreplaceoldfiles_label.add_class(\"label-flex\")\n",
         "\n",
         "imdbbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
         "imdbbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
@@ -4779,7 +4734,7 @@
         "                            imdbratings_hbox, imdbvotes_hbox, imdbruntime_hbox), layout= imdbview1collayout)\n",
         "\n",
         "imdbrsearchviewcol2_vbox = VBox((imdbinlist_hbox, imdbnotinlist_hbox, imdbsearchparams_hbox, imdbfilterdownloadded_hbox, imdbfilterwatched_hbox,\n",
-        "                            imdbreplaceandmergeoldfiles_hbox, imdbenglishonly_hbox,\n",
+        "                            imdbreplaceoldfiles_hbox, imdbenglishonly_hbox,\n",
         "                            ), layout= imdbview1collayout)\n",
         "\n",
         "imdbrsearchviewcol3_vbox = VBox((imdbinternationaltitles_hbox, imdbindiantitles_hbox, imdbanimationtitles_hbox, imdbtop250_hbox,\n",
@@ -5078,12 +5033,11 @@
         "        children = (result_html,)\n",
         "    else:\n",
         "        searchtitle_html = HTML(gethtmltext(f\"Search results {result.search}\", fontsize= '22px'), layout= {'width': '33%'})\n",
-        "        controls_hbox = result.getcontrolsbox()\n",
+        "        controls_hbox = HBox(result.getresultcontrols(), layout= {\"width\": \"550px\"})\n",
         "\n",
         "        def pagination_handler(btn): \n",
         "            page = int(btn.description)\n",
         "            updatesearchresults(result, page= page)\n",
-        "\n",
         "        result.pagination_handler = pagination_handler\n",
         "        pagination = getpagination(result)\n",
         "        pagination_hbox = HBox(pagination, layout= {'align_items':'center'})\n",
@@ -5093,7 +5047,6 @@
         "        resultsoutput = Output()\n",
         "        with resultsoutput:\n",
         "            display(result.table)\n",
-        "            \n",
         "        result.tableoutput = resultsoutput\n",
         "        result.pagination_container = pagination_hbox\n",
         "        row2 = VBox((resultsoutput,), layout= {\"height\": \"700px\", \"width\": \"100%\"})\n",
